# doomscroll

./: QUICK_TEST.md  README.md  SETUP_USER_FLOW.md  USER_FLOW_COMPLETE.md  docker-compose.yml
_client/: package-lock.json  tsconfig.json
_client/app/(tabs)/: _layout.tsx  index.tsx
_client/services/: alertAndLog.ts  useMovileWallet.ts
client/: App.tsx  CHALLENGE_SYSTEM_IMPLEMENTATION.md  ONBOARDING.md  QUICK_START.md  README.md  UI_IMPLEMENTATION.md  WALLET_UI.md  app.json  babel.config.js  global.css  package-lock.json  package.json  solana-dapp-store.json  tailwind.config.js
client/app/: _layout.tsx
client/components/: WalletButton.tsx
client/src/components/: AppContent.tsx
client/src/contexts/: UserContext.tsx
client/src/hooks/: useJoinChallenge.ts  useOnboarding.ts
client/src/navigators/: AppNavigator.tsx  HomeNavigator.tsx
client/src/screens/: ChallengeDetailScreen.tsx  index.ts  (+4 more)
contract/: Anchor.toml  README.md
contract/programs/contract/: Cargo.toml
contract/programs/contract/src/: errors.rs  lib.rs
contract/programs/contract/src/instructions/: create_challenge.rs  distribute_rewards.rs  end_challenge.rs  join_challenge.rs  mod.rs
contract/programs/contract/src/state/: challenge.rs  counter.rs  mod.rs  participant.rs
contract/tests/: contract.ts
server/: .env.example  .gitignore  ADMIN_GUIDE.md  ADMIN_IMPLEMENTATION.md  QUICK_START_ADMIN.md  README.md  SETUP.md  package-lock.json  package.json
server/prisma/: schema.prisma
server/scripts/: create-test-challenge.js
server/src/: index.ts
server/wallets/: verifier-keypair.json
(+44 files in other folders)
