[package]
name = "contract"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "contract"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build"]
anchor-debug = []


[dependencies]
anchor-lang = {version = "0.31.1", features = ["init-if-needed"]}
borsh = "0.10.3"
solana-system-interface = "2.0.0"

